<resources>
    <string name="app_name">FloeNavigationSystem</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="action_items">Action Items</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add_point">Add Point</string>
    <string name="discard_point">Discard Point</string>
    <string name="deployment_point">Deployment Point</string>
    <string name="lat">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="latitude">Latitude:</string>
    <string name="device_name">Device Name:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sync_fragment">Sync_fragment</string>
    <string name="accept">ACCEPT</string>
    <string name="cancel">Cancel</string>
    <string name="initial_configuration_completed">Successfully Completed Initial Configuration</string>
    <string name="navigate_to_dashboard_grid"><![CDATA[Navigate to Dashboard->Grid]]></string>
    <string name="msg">Coordinate System has been established</string>
    <string name="ok">Ok</string>
</resources>
