<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeploymentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/deployment_point"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/RelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/devicename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/device_name"
                android:textSize="20sp" />

            <EditText
                android:paddingLeft="10dp"
                android:layout_width="925dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/devicename"
                android:layout_toRightOf="@id/devicename"
                android:background="@drawable/depl_bg"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RelLat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/latTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/latitude"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lat"
                android:layout_width="950dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/latTitle"
                android:layout_toRightOf="@id/latTitle"
                android:background="@drawable/depl_bg"
                android:paddingLeft="10dp"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RelLon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lonTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/longitude"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/lon"
                android:layout_width="950dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/lonTitle"
                android:layout_toRightOf="@id/lonTitle"
                android:background="@drawable/depl_bg"
                android:paddingLeft="10dp"
                android:textSize="20sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAccept"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_transparent_round"
                android:text="@string/accept"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_transparent_round"
                android:text="@string/cancel"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>