<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center">


    <android.support.v7.widget.CardView
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/transparentBlack"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp">

                <ImageView
                    android:id="@+id/succIcon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_done_all_black_24dp"/>

                <TextView
                    android:id="@+id/succMsg1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/initial_configuration_completed"/>

                <TextView
                    android:id="@+id/succMsg2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/msg"/>

                <TextView
                    android:id="@+id/succMsg3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/navigate_to_dashboard_grid"/>

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/ok"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>