<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    android:animateLayoutChanges="true"
    tools:context=".LoginPage">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_account_box_black_24dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>

        <RelativeLayout
            android:id="@+id/username_pwd"
            android:layout_below="@id/imageViewLogo"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:id="@+id/linear"
                android:layout_below="@id/tv_login"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="40sp"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:inputType="textVisiblePassword|textNoSuggestions"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="40sp"
                        android:textSize="15sp"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear"
                android:text="@string/login_now"
                android:background="@drawable/btn_bg"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="toInitialization"
                android:foreground="?android:attr/selectableItemBackground"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>